--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -1,4 +1,4 @@
-<div class="postConstraint subPost form subCommentForm">
+<div class="postConstraint subPost form subCommentForm" id="commentForm_<%= @commentable.id %>">
   <div class="postUser">
     <div class="formField">
       <%= label_tag '', '&nbsp;'.html_safe %><br/>
