moved js on post#show to post.js file

--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -27,24 +27,4 @@
 <% else %>
   <i>No Comments</i>
 <% end %>
-<script>
-$(".sortMenu").sortMenu();
-$("#commentList").on('click', '.replyFormLoadLink', function(event){
-  var $that = $(this),
-      $constraint = $that.closest('.postComment'),
-      $container = $that.closest("#commentList"),
-      $rel = $that.attr('rel');
-
-  $container.find(".subCommentForm").hide();
-
-  if ($("#commentForm_"+$rel).length > 0) {
-    $("#commentForm_"+$rel).slideDown();
-  } else {
-    $.get(this.href, function(data){
-      $constraint.after(data);
-    });
-  }
-
-  event.preventDefault();
-});
-</script>
+<%= javascript_include_tag params[:controller] %>
