reply form styling

--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -66,8 +66,9 @@
   }
 }
 .subPost {
-  padding-left:250px;
+  padding-left:275px;
+  margin:15px 0;
   .postUser {
-    left:100px;
+    left:125px;
   }
 }
