only list subcomments if present

--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -9,6 +9,7 @@
 </div>
 <% if @post.comments.present? %>  
   <% @post.comments.each do |comment| %>
+    <% replies = comment.comments %>
     <div class="comment">
       <div class="postComment postConstraint"> 
         <div class="postUser">
@@ -22,17 +23,19 @@
           </div>
         </div>
       </div>
-      <div class="postSubcomments">
-        <% comment.comments.each do |c| %>
-          <div class="subPost postComment postConstraint"> 
-            <div class="postUser">
-              <%= link_to image_tag('default_user.png', class: 'userImageMed'), c.user %>
-              <span class="postUsername"><%= link_to c.user.username %></span>
+      <% if replies.present? %>
+        <div class="postSubcomments">
+          <% replies.each do |c| %>
+            <div class="subPost postComment postConstraint"> 
+              <div class="postUser">
+                <%= link_to image_tag('default_user.png', class: 'userImageMed'), c.user %>
+                <span class="postUsername"><%= link_to c.user.username %></span>
+              </div>
+              <div class="postContent"><%= markdown(c.message) %></div>
             </div>
-            <div class="postContent"><%= markdown(c.message) %></div>
-          </div>
-        <% end %>
-      </div>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   <% end %>
 <% else %>
