removed .subPost css class

--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -26,7 +26,7 @@
       <% if replies.present? %>
         <div class="postSubcomments">
           <% replies.each do |c| %>
-            <div class="subPost postComment postConstraint"> 
+            <div class="postComment postConstraint"> 
               <div class="postUser">
                 <%= link_to image_tag('default_user.png', class: 'userImageMed'), c.user %>
                 <span class="postUsername"><%= link_to c.user.username %></span>
