--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -25,6 +25,7 @@
       </div>
       <% if replies.present? %>
         <div class="postSubcomments">
+          <div class="postSubcommentsDetail"><b><%= pluralize(replies.size, "reply") %></b> | <%= link_to "Hide Replies" %></div>
           <% replies.each do |c| %>
             <div class="postComment postConstraint"> 
               <div class="postUser">
