--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -36,10 +36,11 @@
       }
     }
     .postSubcomments {
-      padding-left:150px;
+      padding-left:125px;
       margin-top:15px;
       .postSubcommentsDetail {
         font-size:10.5pt;
+        text-align:right;
       }
       .postComment {margin-top:10px;}
     }
