--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,6 @@
 
 <hr class="dottedDivider" />
 
-<div id="commentList">
-  <%= render 'comments/comment_list' %>
-</div>
+<div id="commentList" rel="<%= post_comments_path(@post) %>"><!-- AJAX render --></div>
 <%= javascript_include_tag params[:controller] %>
+<script>loadPostComments()</script>
