--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -22,7 +22,8 @@
     height:100%;
     padding:0 15px 0 0;
     text-align:center;
-    .postUsername {font-size:1.1em;}
+    .userImageMed {vertical-align: middle;}
+    .postUsername {font-size:10.5pt;}
   }
   .postContent {
     margin:20px 0;
@@ -65,6 +66,7 @@
     }
   }
 }
+.postMain .postUser .postUsername {font-size:15pt;}
 #commentForm, .subCommentForm {
   display:block;
   margin:15px 0 20px;
