--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -13,7 +13,7 @@
     <div class="comment">
       <div class="postComment postConstraint"> 
         <div class="postUser">
-          <%= link_to image_tag('default_user.png', class: 'userImageMed'), comment.user %>
+          <%= link_to image_tag('default_user.png', class: 'userImageMed'), comment.user %><br/>
           <span class="postUsername"><%= link_to comment.user.username %></span>
         </div>
         <div class="postContent"><%= markdown(comment.message) %></div>
@@ -29,7 +29,7 @@
           <% replies.each do |c| %>
             <div class="postComment postConstraint"> 
               <div class="postUser">
-                <%= link_to image_tag('default_user.png', class: 'userImageMed'), c.user %>
+                <%= link_to image_tag('default_user.png', class: 'userImageMed'), c.user %><br/>
                 <span class="postUsername"><%= link_to c.user.username %></span>
               </div>
               <div class="postContent"><%= markdown(c.message) %></div>
