--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -80,4 +80,4 @@
     input[type="submit"], .cancelForm  {line-height:40px; font-size:11pt;}
   }
 }
-.subCommentForm {margin:0 0 10px; min-height:0;}
+.subCommentForm {margin:0 0 10px; min-height:0; display:none;}
