added voting links to post comments

--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -33,6 +33,26 @@
         .commentReply {
           margin-top:2px;
           font-size:10.5pt;
+          display:inline-block;
+        }
+        .postRep {
+          height:16px;
+          margin-top:2px;
+          .like, .dislike {
+            width:16px;
+            height:16px;
+            background-position:0 -24px;
+            vertical-align:middle;
+            &:hover {background-position:-24px -24px;}
+            &:active, &.voted {background-position:-48px -24px;}
+            &.voted {cursor:default;}
+          }
+          .dislike {
+            background-position:-120px -24px;
+            &:hover {background-position:-96px -24px;}
+            &:active, &.voted {background-position:-72px -24px;}
+          }
+          .repCount {font-size:0.9em;}
         }
       }
     }
