--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -55,7 +55,7 @@
         &:hover {background-position:-96px 0;}
         &:active, &.voted {background-position:-72px 0;}
       }
-      #repCount {
+      .repCount {
         line-height:1.1;
         font-size:1.2em;
         font-weight:bold;
