--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -24,7 +24,7 @@
           <div class="postRep">
             <%= link_to '', comment_vote_path(comment, rep_val: 1.0), method: :put, class: 'like' %>
             <p class="repCount"><%= post_reputation(comment.reputations) %></p>
-            <%= link_to '', comment_vote_path(comment, rep_val: -1.0), method: :pit, class: 'dislike' %>
+            <%= link_to '', comment_vote_path(comment, rep_val: -1.0), method: :put, class: 'dislike' %>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
                   <div class="postRep">
                     <%= link_to '', comment_vote_path(c, rep_val: 1.0), method: :put, class: 'like' %>
                     <p class="repCount"><%= post_reputation(c.reputations) %></p>
-                    <%= link_to '', comment_vote_path(c, rep_val: -1.0), method: :pit, class: 'dislike' %>
+                    <%= link_to '', comment_vote_path(c, rep_val: -1.0), method: :put, class: 'dislike' %>
                   </div>
                 </div>
               </div>
