--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -1,12 +1,3 @@
-<div id="commentListDetails">
-  <b><%= pluralize(@comments.size, "comment") %> total</b> | 
-  Sort by: 
-  <ul class="sortMenu">
-    <% Comment::SORT_OPTIONS.each do |sort_face, sort_value| %>
-      <li class="<%= 'selected' if params[:comment_sort] == sort_value %>"><%= link_to sort_face, params.merge(comment_sort: sort_value) %></li>
-    <% end %>
-  </ul>
-</div>
 <% if @comments.present? %>  
   <% @comments.each do |comment| %>
     <% replies = comment.comments %>
@@ -56,3 +47,4 @@
 <% else %>
   <i>No Comments</i>
 <% end %>
+<%= paginate @comments %>
