fixed the comment reputation not being displayed

--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,5 +1,5 @@
 <% if params[:full_load] %>
-  $("#commentList").append("<%= escape_javascript(render('comments')) %>"); 
+  $("#commentList").html("<%= escape_javascript(render('comments')) %>"); 
 <% else %>
   $("#commentList").append("<%= escape_javascript(render('comment_list')) %>"); 
 <% end %>
