added page wrapper to comments

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -7,5 +7,7 @@
     <% end %>
   </ul>
 </div>
-<%= render 'comment_list' %>
+<div class="commentPage">
+  <%= render 'comment_list' %>
+</div>
 <%= paginate @comments %>
