removed infinitescroll.js and added remote links for kaminari pagination

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -10,4 +10,4 @@
 <div class="commentPage">
   <%= render 'comment_list' %>
 </div>
-<%= paginate @comments %>
+<%= paginate @comments, remote: true %>
