--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,5 +1,2 @@
-<% if params[:full_load] %>
-  $("#commentList").html("<%= escape_javascript(render('comments')) %>"); 
-<% else %>
-  $("#commentList").append("<div class='commentPage'><%= escape_javascript(render('comment_list')) %></div>"); 
-<% end %>
+$("#commentList").html("<%= escape_javascript(render('comments')) %>"); 
+$(".sortMenu").sortMenu();
