renamed _comments.html.erb partial to _comment_container.html.erb

--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,2 +1,2 @@
-$("#commentList").html("<%= escape_javascript(render('comments')) %>"); 
+$("#commentList").html("<%= escape_javascript(render('comment_container')) %>"); 
 $(".sortMenu").sortMenu();
