added datestamp to comments

--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -30,6 +30,7 @@
         &:after {border-width: 0 18px 18px 0; border-color:transparent #f8f8f8 transparent transparent; margin-top:1px;}
       }
       .postBottom {
+        .commentDatestamp {font-size:10.5pt; color:#888; display:inline-block;}
         .commentReply {
           margin-top:2px;
           font-size:10.5pt;
