--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -15,7 +15,7 @@
         position:relative;
         background:#f8f8f8;
         border-radius:4px;
-        p {margin:0; padding:10px; min-height:53px;}
+        p {margin:0; padding:10px; min-height:53px; font-size:11pt;}
         &:after, &:before {
           position:absolute;
           right:100%;
