--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -62,6 +62,9 @@
         display:inline-block;
         height:100%;
         margin:0 10px;
+        .positive {color:green;}
+        .negative {color:red;}
+        .neutral {color:#444;}
       }
     }
   }
