--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       </div>
       <ul id="nav">
         <% if current_user %>
-          <li><%= link_to 'Logout', logout_path %>
+          <li><%= link_to current_user.username, current_user %></li><li><%= link_to 'Logout', logout_path %></li>
         <% else %>
           <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
         <% end %>
