--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -122,6 +122,19 @@
   }
 }
 
+.progress {
+  max-width: 600px;
+  margin:    0.2em 0 0.2em 0;
+  border-radius:5px;
+  overflow:hidden;
+  .bar {
+    height:  1.2em;
+    padding: 0.2em;
+    color:   white;
+    display: none;
+  }
+}
+
 #postForm {
   .formField {
     input[type="text"], textarea {width:525px;}
