replaced default user images on post show with user's uploaded image

--- a/app/assets/stylesheets/all/users.css.scss
+++ b/app/assets/stylesheets/all/users.css.scss
@@ -1,2 +1,2 @@
-img.userImage {border-radius:5%;}
+img.userImage {border-radius:5%; max-width:120px; max-height:120px;}
 img.userImageMed {border-radius:5%; max-height:75px; max-width:75px;}
