--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -2,7 +2,7 @@
   <div class="formField">
     <%= label_tag '', '&nbsp;'.html_safe %><br/>
     <%= link_to image_tag(@post.user.avatar_url, class: 'userImageMed'), current_user %><br/>
-    <span class="postUsername"><%= link_to @post.user.username %></span>
+    <span class="postUsername"><%= link_to @post.user.username, @post.user %></span>
   </div>
 </div>
 <%= form_for [@post, Comment.new] do |f| %>
