--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,78 +1,5 @@
 <%= image_tag @user.avatar_url %>
-<%= form_for @user, url: update_avatar_user_path(@user), html: {class: 'avatarUpload'} do |f| %>
-  <%= label_tag :avatar, "Upload Avatar" %>
-  <%= file_field_tag :avatar %>
+<%= link_to 'Change Avatar', '#', id: 'avatarPopupLink' %>
 
-  <%= f.hidden_field :avatar_url %>
-  <br/>
-  <%= submit_tag %>
-<% end %>
-<%= javascript_include_tag 'jquery.ui.widget' %>
-<%= javascript_include_tag 'jquery.fileupload' %>
-<script>
-var fileIndex = 0;
-
-$(function() {
-  $('.avatarUpload').find("input:file").each(function(i, elem) {
-    var fileInput    = $(elem);
-    var form         = $(fileInput.parents('form:first'));
-    var submitButton = form.find('input[type="submit"]');
-    var progressBar  = $("<div class='bar'></div>");
-    var barContainer = $("<div class='progress'></div>").append(progressBar);
-    fileInput.after(barContainer);
-    fileInput.fileupload({
-      fileInput:        fileInput,
-      url:              '<%= @s3_direct_post.url %>',
-      type:             'POST',
-      autoUpload:        false,
-      singleFileUploads: true, 
-      formData:          <%= @s3_direct_post.fields.to_json.html_safe %>,
-      paramName:        'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
-      dataType:         'XML',  // S3 returns XML if success_action_status is set to 201
-      replaceFileInput: false,
-      add: function(e, data) {
-        fileIndex++;
-        var currentFile = fileIndex;
-
-        submitButton.bind('click', function(event){
-          if (currentFile == fileIndex) {
-            data.submit();
-          } else {
-            data.pop;
-          }
-          event.preventDefault();
-        });
-      },
-      progressall: function (e, data) {
-        var progress = parseInt(data.loaded / data.total * 100, 10);
-        progressBar.css('width', progress + '%')
-      },
-      start: function (e) {
-        submitButton.prop('disabled', true);
-
-        progressBar.
-          css('background', 'green').
-          css('display', 'block').
-          css('width', '0%').
-          text("Loading...");
-      },
-      done: function(e, data) {
-        submitButton.prop('disabled', false);
-        progressBar.text("Uploading done");
-
-        // extract key and generate URL from response
-        var key   = $(data.jqXHR.responseXML).find("Key").text();
-        $("#user_avatar_url").val(key);
-        form.submit();
-      },
-      fail: function(e, data) {
-        submitButton.prop('disabled', false);
-
-        progressBar.
-          css("background", "red").
-          text("Failed");
-      }
-    });
-  });
-});
-</script>
+<%= javascript_include_tag params[:controller] %>
+<%= popup('avatar_form', 'avatarPopup') %>
