change .placeholder css class' color

--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -94,7 +94,7 @@ li {list-style-type:square;}
 .textLeft {text-align:left;}
 .right {float:right;}
 .left {float:left;}
-.placeholder {color:#ccc; font-style:italic;}
+.placeholder {color:#888; font-style:italic;}
 hr.dottedDivider {background:none; border:0; border-top:1px dashed;}
 
 .positive {color:green;}
