--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="postComment postConstraint"> 
   <div class="postUser">
-    <%= link_to image_tag(details[:user].avatar_url, class: 'userImageMed'), details[:user] %><br/>
+    <%= user_med_avatar details[:user] %><br/>
     <span class="postUsername"><%= link_to details[:user].username, details[:user] %></span>
   </div>
   <div class="postContent"><%= markdown(comment.message) %></div>
