--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="postUser">
-    <%= link_to image_tag(@post.user.avatar_url, class: 'userImage'), @post.user %>
+    <%= user_lg_avatar(@post.user) %>
     <span class="postUsername"><%= link_to @post.user.username, @post.user %></span>
   </div>
 </div>
