--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -2,7 +2,7 @@
   <div class="postUser">
     <div class="formField">
       <%= label_tag '', '&nbsp;'.html_safe %><br/>
-      <%= link_to image_tag('default_user.png', class: 'userImageMed'), current_user %><br/>
+      <%= user_med_avatar current_user %><br/>
       <span class="postUsername"><%= link_to @commentable.user.username %></span>
     </div>
   </div>
